# fractalRenderer

./: .clangformat  Application.cpp  Application.h  CMakeLists.txt  Fractal.cpp  Fractal.h  LICENSE  README.md  Window.cpp  Window.h  main.cpp
Math/: BiDimensionnalArray.cpp  BiDimensionnalArray.h  Complex.h  MathHeader.h
